# blochSimPublic

./: .gitignore  README.md
blochSimCpp/: CMakeLists.txt  Dockerfile  main.cpp  params.h
blochSimCpp/.devcontainer/: devcontainer.json
blochSimCpp/blochSim/: CMakeLists.txt  blochSim.cpp  blochSim.h
blochSimMatlab/: README.md  blochSim.m  demo.m  vectarrow.m
